cmake_minimum_required(VERSION 3.23)

project(LinuxServerProgamming)

set(CMAKE_CXX_STANDARD 20)
#link_libraries(ws2_32 wsock32)

add_executable(LinuxServerProgamming ChangeTcpSendBuffer.cpp)
add_executable(ChangeTcpReceiveBuffer ChangeTcpReceiveBuffer.cpp)
add_executable(ChangeTcpSendBuffer ChangeTcpSendBuffer.cpp)
add_executable(GetDaytime GetDaytime.cpp)
add_executable(IOfunctionClient IOfunctionClient.cpp)
add_executable(IOfunction IOfunction.cpp)
add_executable(BasicCGIWithDup BasicCGIWithDup.cpp)
add_executable(WebReadv WebReadv.cpp)
add_executable(SendMessage SendMessage.cpp)
add_executable(SendFile SendFile.cpp)
add_executable(LinuxGetDayTime LinuxGetDayTime.cpp)
add_executable(ChatClient ChatClient.cpp)
add_executable(ChatServer ChatServer.cpp)
add_executable(main main.cpp)
add_executable(TcpEchoClient TcpEchoClient.cpp)
add_executable(Echoserver Echoserver.cpp)